--- a/sim/index.html
+++ b/sim/index.html
@@ -16,8 +16,8 @@
 			<div id="hide_on_first_playthrough">
 				<div id="section_dynamics">
 
-					<i>平均</i>而言,
-					每个<icon i></icon>...
+					<i>平均而言,</i>
+					每个 <icon i></icon>...
 					<br><br>
 
 					<div id="label_transmission">
@@ -31,21 +31,21 @@
 
 					<div id="label_c_exposed">
 						<input class="sim_checkbox" type="checkbox" id="c_exposed">
-						从<icon e></icon>变成<icone i></icon>需要<span id="label_p_exposed">N</span>天
+						从 <icon e></icon> 变成 <icone i></icon> 需要 <span id="label_p_exposed">N</span> 天
 						<br>
 						<input class="sim_input" type="range" id="p_exposed" min="1" max="30" step="1" value="3">
 					</div>
 
 					<div id="label_c_recovery">
 						<input class="sim_checkbox" type="checkbox" id="c_recovery">
-						从<icon i></icon>变成<icon r></icon>需要<span id="label_p_recovery">N</span>天
+						从 <icon i></icon> 变成 <icon r></icon> 需要 <span id="label_p_recovery">N</span> 天
 						<br>
 						<input class="sim_input" type="range" id="p_recovery" min="1" max="30" step="1" value="10">
 					</div>
 
 					<div id="label_c_waning">
 						<input class="sim_checkbox" type="checkbox" id="c_waning">
-						在<span id="label_p_waning">N</span>月后失去免疫力<icon s></icon>
+						在 <span id="label_p_waning">N</span> 个月后失去免疫力 <icon s></icon>
 						<br>
 						<input class="sim_input" type="range" id="p_waning" min="1" max="60" step="1" value="12">
 					</div>
@@ -56,13 +56,13 @@
 
 				<div id="section_r">
 
-					R<sub>0</sub>的值是<span id="label_p_r0" toFixed="2"></span>
+					R<sub>0</sub> 的值是 <span id="label_p_r0" toFixed="2"></span>
 					<canvas class="r_canvas" id="canvas_r0"></canvas>
 					<!--input class="sim_input" type="range" id="p_r0" min="0" max="6" step="0.01" disabled-->
 					<br>
 
 					<span id="label_s">
-						<i>非</i> <icon s></icon>的人所占百分比
+						<i>非</i> <icon s></icon> 的人所占百分比
 						<input class="sim_input" type="range" id="p_s" min="0" max="1" step="0.001" value="0" disabled>
 						<div class="herd"></div>
 						<br>
@@ -110,13 +110,13 @@
 					</span>
 
 					<span id="label_re">
-						目前 R 的值为<span id="label_p_re" toFixed="2"></span>
+						目前 R 的值为 <span id="label_p_re" toFixed="2"></span>
 						<canvas class="r_canvas" id="canvas_re"></canvas>
 						<!--<input class="sim_input" type="range" id="p_re" min="0" max="6" step="0.01" disabled>-->
 					</span>
 
 					<span id="hospital_capacity">
-						ICU 病房数是原来的<span id="label_p_hospital">N</span>%
+						ICU 病房数是原来的 <span id="label_p_hospital">N</span>%
 						<br>
 						<input class="sim_input recordable" type="range" id="p_hospital" min="100" max="1000" step="1" value="333">
 					</span>
@@ -127,13 +127,13 @@
 
 				<div id="section_meta">
 
-					模拟<span id="label_p_years" toFixed="1">N</span>年的情况
+					模拟 <span id="label_p_years" toFixed="1">N</span> 年的情况
 					<span id="section_meta_years">
 						<br>
 						<input class="sim_input" type="range" id="p_years" min="0.5" max="10" step="0.5" value="2">
 						<br>
 					</span>
-					用时<span id="label_p_speed">N</span>秒
+					用时 <span id="label_p_speed">N</span> 秒
 					<br>
 					<input class="sim_input" type="range" id="p_speed" min="1" max="60" step="1" value="30">
 
@@ -160,7 +160,7 @@
 					</div>
 				</div>
 				<!--div id="sb_stop">
-					Stop
+					停止
 				</div-->
 				<div id="sb_reset">
 					重置
