--- a/sim/index.html
+++ b/sim/index.html
@@ -24,7 +24,7 @@
 						在 <span id="label_p_transmission">N</span> 天后感染一个 <icon s></icon>
 						<br>
 						<span id="label_transmission_caveat">
-							（在疫情开始的时候）<<br>
+							（在疫情开始的时候）<br>
 						</span>
 						<input class="sim_input" type="range" id="p_transmission" min="1" max="30" step="1" value="4">
 					</div>
