clearify the recovery
There's a difference between "a recovery" and "full recovery", if you watch ChubbyEmu enough.

--- a/sim/index.html
+++ b/sim/index.html
@@ -195,7 +195,7 @@
 					<br>
 				</span>
 				<span id="label_removed" class="lines">
-					<icon r></icon> 康复者<span id="show_percent_r"></span>
+					<icon r></icon> 恢复者<span id="show_percent_r"></span>
 				</span>
 
 				<br class="lines">
