--- a/sim/index.html
+++ b/sim/index.html
@@ -116,7 +116,7 @@
 					</span>
 
 					<span id="hospital_capacity">
-						ICU 病房数是原来的<span id="label_p_hospital">N</span>%
+						ICU 的床位数是原来的<span id="label_p_hospital">N</span>%
 						<br>
 						<input class="sim_input recordable" type="range" id="p_hospital" min="100" max="1000" step="1" value="333">
 					</span>
@@ -207,7 +207,7 @@
 				<br class="lines">
 
 				<span id="label_capacity">
-				––– ICU 病房容量
+				––– ICU 的容量
 				</span>
 
 			</div>
