--- a/sim/index.html
+++ b/sim/index.html
@@ -85,7 +85,7 @@
 						<br>
 						<input class="sim_input recordable" type="range" id="p_isolate" min="0" max="1" step="0.001" value="0">
 						<br>
-						隔离密切接触者
+						隔离接触者
 						<br>
 						<input class="sim_input recordable" type="range" id="p_quarantine" min="0" max="1" step="0.001" value="0">
 						<br>
