--- a/sim/index.html
+++ b/sim/index.html
@@ -31,7 +31,7 @@
 
 					<div id="label_c_exposed">
 						<input class="sim_checkbox" type="checkbox" id="c_exposed">
-						从<icon e></icon>变成<icone i></icon>需要<span id="label_p_exposed">N</span>天
+						从<icon e></icon>变成<icon i></icon>需要<span id="label_p_exposed">N</span>天
 						<br>
 						<input class="sim_input" type="range" id="p_exposed" min="1" max="30" step="1" value="3">
 					</div>
