--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 
 	<!-- THE BIG META -->
 	<title>接下来会发生什么？未来的新冠疫情和可交互的疫情模拟器</title>  <!-- TRANSLATE -->
-	<meta name="description" content="an interactive guide" />  <!-- TRANSLATE: content -->
+	<meta name="description" content="可交互的疫情模拟器" />  <!-- TRANSLATE: content -->
 	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset="utf-8">
 	<base target="_blank">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">  <!-- TRANSLATE: content -->
-	<meta name="twitter:description" content="an interactive guide">  <!-- TRANSLATE: content -->
+	<meta name="twitter:title" content="接下来会发生什么？未来的新冠疫情和可交互的疫情模拟器">  <!-- TRANSLATE: content -->
+	<meta name="twitter:description" content="可交互的疫情模拟器">  <!-- TRANSLATE: content -->
 	<meta name="twitter:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">  <!-- TRANSLATE: content -->
+	<meta property="og:title" content="接下来会发生什么？未来的新冠疫情和可交互的疫情模拟器">  <!-- TRANSLATE: content -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ncase.me/covid-19/">
 	<meta property="og:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
-	<meta property="og:description" content="an interactive guide">  <!-- TRANSLATE: content -->
-	<meta property="og:site_name" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">  <!-- TRANSLATE: content -->
+	<meta property="og:description" content="可交互的疫情模拟器">  <!-- TRANSLATE: content -->
+	<meta property="og:site_name" content="接下来会发生什么？未来的新冠疫情和可交互的疫情模拟器">  <!-- TRANSLATE: content -->
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/littlefoot.css"/>
@@ -42,7 +42,7 @@
 		<!-- IF YOU'RE MAKING A TRANSLATION, UN-COMMENT THE NEXT LINE -->
 		<li><a href='https://ncase.me/covid-19/'>English（英文原版）</a></li>
 		<li><a href='https://vrruiz.github.io/covid-19'>Español</a></li>
-    <li><a href='https://catheu.tech/covid-19/'>Français</a></li>
+		<li><a href='https://catheu.tech/covid-19/'>Français</a></li>
 		<li><a href='https://leonardoalcantara.github.io/covid-19-pt-br/'>Português</a></li>
 		<li><a href='https://tquev.github.io/covid-19/'>Deutsch</a></li>
 		<li><a href='https://harisont.github.io/covid-19/'>Italiano</a></li>
