Fix itching italics in Footer & FNs.
There's no italics in Chinese.

--- a/index.html
+++ b/index.html
@@ -884,13 +884,14 @@
 	</li>
 
 	<li id="fn36">
-	<p><strong>“我们需要保证医院能得到足够的口罩。” <em>同意。</em> 但这是支持提高口罩产量的观点，而不是定量供应口罩。因为可以用布料制作口罩。&nbsp;<a href="#fnref36" rev="footnote">&#8617;</a></p>
+	<p><strong>“我们需要保证医院能得到足够的口罩。” </strong> <em>同意。</em> 但这是支持提高口罩产量的观点，而不是定量供应口罩。因为可以用布料制作口罩。&nbsp;<a href="#fnref36" rev="footnote">&#8617;</a></p>
 
 	<p><strong>“口罩很难以正确的方式佩戴。” </strong>按世界卫生组织指导的方法洗手也很难。“第三步：将右手掌心放在左手手背上？！” 我们依然提倡洗手，做得不好总比不做要好。</p>
 	
 	<p>译注：中国大陆推荐的七步洗手法为：内外夹弓大立腕，而世卫指导的洗手方法只有前 6 步。上面的 “第三步” 对应的是七步洗手法的第二步。</p>
 
 	<p><strong>“这会让人忽视洗手，降低人与人的间距。”</strong> 的确，安全带会让人忽视交通标志，牙线会让人乱吃硬物。不过严格来讲，口罩能将注意个人卫生的提醒 <em>实体化。</em> 在东亚，口罩还是团结的象征。</p>
+	
 	</li>
 
 	<li id="fn37">
@@ -914,7 +915,7 @@
 	</li>
 
 	<li id="fn42">
-	<p>来源：<a href="https://www.biorxiv.org/content/10.1101/2020.03.13.990226v1.abstract">Bao et al.</a> <em>（声明：该文章为预印本，尚未经过同行评议。）同时强调：他们只在 28 天后针对是否感染进行测试。&nbsp;<a href="#fnref42" rev="footnote">&#8617;</a></p>
+	<p>来源：<a href="https://www.biorxiv.org/content/10.1101/2020.03.13.990226v1.abstract">Bao et al.</a>（声明：该文章为预印本，尚未经过同行评议。）同时强调：他们只在 28 天后针对是否感染进行测试。&nbsp;<a href="#fnref42" rev="footnote">&#8617;</a></p>
 	</li>
 
 	<li id="fn43">
@@ -930,6 +931,7 @@
 	</li>
 
 	</ol>
+	
 	</div>
 </article>
 
