--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
 	</li>
 
 	<li id="fn6">
-	<p>想更为深入理解 SIR 模型的技术细节，请阅读 <a href="https://www.idmod.org/docs/hiv/model-seir.html">the Institute for Disease Modeling</a> 和 <a href="http://en.wiki.sxisa.org/wiki/Compartmental_models_in_epidemiology#The_SEIR_model">维基百科词条</a>&nbsp;<a href="#fnref6" rev="footnote">&#8617;</a></p>
+	<p>想更为深入理解 SEIR 模型的技术细节，请阅读 <a href="https://www.idmod.org/docs/hiv/model-seir.html">the Institute for Disease Modeling</a> 和 <a href="http://en.wiki.sxisa.org/wiki/Compartmental_models_in_epidemiology#The_SEIR_model">维基百科词条</a>&nbsp;<a href="#fnref6" rev="footnote">&#8617;</a></p>
 	</li>
 
 	<li id="fn7">
